[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "fiction-writing-agents"
version = "1.0.0"
description = "短篇小说创作智能体库 / Short Fiction Writing Agents Library"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["fiction", "writing", "agents", "AI", "short story", "copilot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
]

[project.urls]
Homepage = "https://github.com/Elysia-520-hosiya/owner-repoElysia-520-hosiya-fiction-writing-agent"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["agents/*.json"]
